Updated to use an external server clone